implemented api to fetch and create div for posts

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </p>
           <div>
             <label
-              class="input input-bordered flex items-center gap-2 rounded-3xl w-[400px] mt-8"
+              class="input input-bordered flex items-center gap-2 rounded-3xl w-[400px] mt-8 py-[28px]"
             >
               <input
                 type="text"
@@ -137,7 +137,9 @@
                 placeholder="Search here anything"
               />
               <span class=""
-                ><button class="px-7 py-2 text-white rounded-3xl bg-[#797DFC]">
+                ><button
+                  class="btn px-7 py-2 text-white rounded-3xl bg-[#797DFC]"
+                >
                   Search
                 </button></span
               >
@@ -160,9 +162,22 @@
         </div>
       </section>
     </header>
-    <main>
+    <main class="max-w-[1170px] mx-auto">
       <!-- Let's Discuss Section -->
-      <section></section>
+      <section class="mt-24">
+        <div class="text-center">
+          <h2 class="font-black text-[40px]">Let's Discuss</h2>
+          <p class="text-[#12132D99] font-normal text-lg leading-7 mt-6 mb-12">
+            Yes, you can run unit tests and view the results directly within the
+            app. The <br />
+            integrated testing features allow for a streamlined .
+          </p>
+        </div>
+        <div>
+          <div id="div-left" class="w-8/12"></div>
+          <div id="div-right" class="w-4/12"></div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="scripts/index.js"></script>
