--- a/index.html
+++ b/index.html
@@ -132,12 +132,15 @@
               class="input input-bordered flex items-center gap-2 rounded-3xl w-[400px] mt-8 py-[28px]"
             >
               <input
+                id="search-txt"
                 type="text"
                 class="grow"
                 placeholder="Search here anything"
               />
               <span class=""
                 ><button
+                  onclick="handleSearch()"
+                  id="search-btn"
                   class="btn px-7 py-2 text-white rounded-3xl bg-[#797DFC]"
                 >
                   Search
@@ -172,6 +175,12 @@
             app. The <br />
             integrated testing features allow for a streamlined .
           </p>
+        </div>
+        <div class="text-center">
+          <span
+            id="loading-spinner"
+            class="loading loading-spinner loading-lg mb-12"
+          ></span>
         </div>
         <div class="flex gap-8">
           <div id="div-left" class="w-8/12"></div>
