--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="flex gap-8">
           <div id="div-left" class="w-8/12"></div>
           <div class="w-4/12">
-            <div id="div-right" class="p-6 bg-[#F3F3F5] rounded-3xl">
+            <div id="div-right" class="p-6 bg-[#F3F3F5] rounded-3xl hidden">
               <div class="flex items-center justify-between">
                 <h2>Title</h2>
                 <div class="flex items-center gap-2">
