added join our forum section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </nav>
       <!-- Banner Section -->
       <section
-        class="flex justify-between items-center bg-[#12132D] bg-[url(./images/bgbanner.png)] bg-bottom bg-no-repeat p-20 rounded-3xl mt-[40px]"
+        class="flex justify-between items-center bg-[#12132D] bg-[url(./images/bgbanner.png)] p-20 rounded-3xl mt-[40px]"
       >
         <div class="">
           <h2 class="text-white font-black text-[64px]">
@@ -195,6 +195,33 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- Join Our Forum Section -->
+      <section class="mt-24 bg-[#12132D] rounded-3xl flex p-10">
+        <div class="w-[70%] mt-4 p-16">
+          <h2 class="text-[40px] font-black mb-4 text-white">Join Our Forum</h2>
+          <p class="text-lg text-[#FFFFFFCC] font-normal leading-7 mb-8">
+            Share your favorite opinion and win and wp forum coffee mug! Yes,
+            you can run unit tests and view the results directly within the app.
+          </p>
+          <button
+            class="btn text-white rounded-3xl bg-[#797DFC] border-none px-8"
+          >
+            Registered Now
+          </button>
+        </div>
+        <div><img src="images/joinforum.png" alt="" /></div>
+      </section>
+      <!-- Latest Posts -->
+      <section class="mt-24">
+        <div class="text-center">
+          <h2 class="font-black text-[40px]">Latest Posts</h2>
+          <p class="text-[#12132D99] font-normal text-lg leading-7 mt-6 mb-12">
+            Yes, you can run unit tests and view the results directly within the
+            app. The <br />
+            integrated testing features allow for a streamlined .
+          </p>
         </div>
       </section>
     </main>
