made responsive until Join Our Forum Section

--- a/index.html
+++ b/index.html
@@ -201,20 +201,30 @@
         </div>
       </section>
       <!-- Join Our Forum Section -->
-      <section class="mt-24 bg-[#12132D] rounded-3xl flex p-10 hidden">
-        <div class="w-[70%] mt-4 p-16">
-          <h2 class="text-[40px] font-black mb-4 text-white">Join Our Forum</h2>
-          <p class="text-lg text-[#FFFFFFCC] font-normal leading-7 mb-8">
+      <section
+        class="mt-10 lg:mt-24 w-[90%] lg:w-full mx-auto bg-[#12132D] rounded-3xl flex items-end p-4 lg:p-10"
+      >
+        <div class="lg:w-[70%] lg:mt-4 lg:p-16">
+          <h2 class="text-[24px] lg:text-[40px] font-black mb-4 text-white">
+            Join Our Forum
+          </h2>
+          <p
+            class="text-[16px] lg:text-lg text-[#FFFFFFCC] font-normal leading-7 mb-8"
+          >
             Share your favorite opinion and win and wp forum coffee mug! Yes,
             you can run unit tests and view the results directly within the app.
           </p>
-          <button
-            class="btn text-white rounded-3xl bg-[#797DFC] border-none px-8"
-          >
-            Registered Now
-          </button>
+          <div class="flex justify-center lg:justify-start">
+            <button
+              class="btn text-white rounded-3xl bg-[#797DFC] border-none px-8"
+            >
+              Register Now
+            </button>
+          </div>
         </div>
-        <div><img src="images/joinforum.png" alt="" /></div>
+        <div class="hidden lg:block">
+          <img src="images/joinforum.png" alt="" />
+        </div>
       </section>
       <!-- Latest Posts -->
       <section class="mt-24 hidden">
