added footer section and made it responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script
+      src="https://kit.fontawesome.com/130e085e08.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -227,13 +231,12 @@
         </div>
       </section>
       <!-- Latest Posts -->
-      <section class="mt-24 hidden">
+      <section class="mt-10 lg:mt-24 w-[90%] lg:w-full mx-auto">
         <div class="text-center">
           <h2 class="font-black text-[40px]">Latest Posts</h2>
           <p class="text-[#12132D99] font-normal text-lg leading-7 mt-6 mb-12">
             Yes, you can run unit tests and view the results directly within the
-            app. The <br />
-            integrated testing features allow for a streamlined .
+            app. The integrated testing features allow for a streamlined .
           </p>
         </div>
         <div class="text-center">
@@ -248,7 +251,28 @@
         ></div>
       </section>
     </main>
-    <footer></footer>
+    <footer
+      class="max-w-[1440px] mt-12 lg:mt-24 mx-auto bg-[#f6f6f7] py-8 px-8 lg:py-[100px] lg:px-[135px] text-center"
+    >
+      <div class="lg:px-[250px]">
+        <h2 class="font-black text-[24px] lg:text-[36px]">MeTro</h2>
+        <p class="text-[#12132D] leading-7 mt-4">
+          Contrary to industry misconceptions, MeTro is not just an ordinary
+          company. Its foundations lie in a rich history of groundbreaking
+          innovations, akin to a piece of avant-garde literature.
+        </p>
+        <div
+          class="flex justify-center items-center text-2xl space-x-8 mt-4 lg:mt-8 mb-6 lg:mb-12"
+        >
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+      </div>
+      <hr />
+      <p class="mt-6 lg:mt-12 text-[#12132D80]">2024, All Rights Reserved.</p>
+    </footer>
     <script src="scripts/allPosts.js"></script>
     <script src="scripts/latestPost.js"></script>
   </body>
